# pairs-trading-nse-nifty50

./: README.md  pairs_trading_clean.ipynb  pyproject.toml
