[project]
name = "pairs-trading-nse-nifty50"
version = "0.1.0"
description = "Cointegration-based pairs trading pipeline on the NIFTY 50 universe"
requires-python = ">=3.13"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "jupyter>=1.0",
]

